Aggiunta responsive desktop su  blocchi colorati

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <!-- Section Viola -->
         <div class="container bgcolor-viola">
             <div class="row row-viola">
-                <div class="column-viola"></div>
-                <div class="column-viola"></div>
+                <div class="column-viola viola-sinistra"></div>
+                <div class="column-viola viola-destra"></div>
             </div>
         </div>
         <!-- Section Testimonials -->
