--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logo</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -12,8 +13,10 @@
         <div class="container bgcolor-blu">
             <div class="row row-menu">
                 <div class="column-menu">
+                    <img class="img-logo" src="./img/logo.png" alt="">
                 </div>
-                <div class="column-menu">
+                <div class="column-menu hamburger-menu">
+                    <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
                 </div>
             </div>
         </div>
@@ -22,11 +25,39 @@
         <!-- Section Blu -->
         <div class="container bgcolor-bianco">
             <div class="row row-blu">
-                <div class=" column-blu-grande"></div>
-                <div class="column-blu"></div>
-                <div class="column-blu"></div>
-                <div class="column-blu"></div>
-                <div class="column-blu"></div>
+                <div class=" column-blu-grande column-blu">
+                    <h2 class="titolo-blu">Get a demo application</h2>
+                    <p class="paragrafo-blu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda adipisci necessitatibus cum non vitae. Dolor reprehenderit cum similique maxime. Necessitatibus illum repellat porro quos fuga nemo officia recusandae magnam praesentium!</p>
+                    <button class="button-appstore"><i class="fa-brands fa-apple" style="color: #ffffff;"></i> App Store</button>
+                    <img class="img-phone" src="./img/phone.png" alt="">
+                </div>
+                <div class="column-blu">
+                    <div>
+                        <i class="fa-solid fa-file-code" style="color: #0084fd;"></i>
+                    </div>
+                    <h2 class="titolo-blu">Clean Code</h2>
+                </div>
+                <div class="column-blu">
+                    <div>
+                        <i class="fa-solid fa-compass-drafting" style="color: #0084fd;"></i>
+                    </div>
+                    <h2 class="titolo-blu">Web Design</h2>
+
+                </div>
+                <div class="column-blu">
+                    <div>
+                        <i class="fa-solid fa-laptop-code" style="color: #0084fd;"></i>
+                    </div>
+                    <h2 class="titolo-blu">Developement</h2>
+
+                </div>
+                <div class="column-blu">
+                    <div>
+                        <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
+                    </div>
+                    <h2 class="titolo-blu">Branding</h2>
+
+                </div>
             </div>
         </div>
         <!-- Section Viola -->
