aggiunti primo e secondo container

--- a/index.html
+++ b/index.html
@@ -32,30 +32,34 @@
                     <img class="img-phone" src="./img/phone.png" alt="">
                 </div>
                 <div class="column-blu">
-                    <div>
-                        <i class="fa-solid fa-file-code" style="color: #0084fd;"></i>
+                    <div class="icona-blu">
+                        <i class=" fa-solid fa-file-code" style="color: #0084fd;"></i>
                     </div>
-                    <h2 class="titolo-blu">Clean Code</h2>
+                    <h2 class="titolo-blu titolo-centrale">Clean Code</h2>
+                    <p class="paragrafo-blu paragrafo-centrale">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobic, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
                 </div>
                 <div class="column-blu">
-                    <div>
-                        <i class="fa-solid fa-compass-drafting" style="color: #0084fd;"></i>
+                    <div class="icona-blu">
+                        <i class=" fa-solid fa-compass-drafting" style="color: #0084fd;"></i>
                     </div>
-                    <h2 class="titolo-blu">Web Design</h2>
+                    <h2 class="titolo-blu titolo-centrale">Web Design</h2>
+                    <p class="paragrafo-blu paragrafo-centrale">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobic, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
 
                 </div>
                 <div class="column-blu">
-                    <div>
+                    <div class="icona-blu">
                         <i class="fa-solid fa-laptop-code" style="color: #0084fd;"></i>
                     </div>
-                    <h2 class="titolo-blu">Developement</h2>
+                    <h2 class="titolo-blu titolo-centrale">Developement</h2>
+                    <p class="paragrafo-blu paragrafo-centrale">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobic, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
 
                 </div>
                 <div class="column-blu">
-                    <div>
-                        <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
+                    <div class="icona-blu">
+                        <i class=" fa-solid fa-bullhorn" style="color: #0084fd;"></i>
                     </div>
-                    <h2 class="titolo-blu">Branding</h2>
+                    <h2 class="titolo-blu titolo-centrale">Branding</h2>
+                    <p class="paragrafo-blu paragrafo-centrale">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobic, architecto ad dolore quod, facere totam quas recusandae blanditiis.</p>
 
                 </div>
             </div>
@@ -63,8 +67,19 @@
         <!-- Section Viola -->
         <div class="container bgcolor-viola">
             <div class="row row-viola">
-                <div class="column-viola viola-sinistra"></div>
-                <div class="column-viola viola-destra"></div>
+                <div class="column-viola viola-sinistra">
+                    <img class="img-computer" src="./img/planning1.png" alt="">
+                    <h2 class="titolo-bianco">Strategic Planning</h2>
+                    <p class="paragrafo-bianco">Egastas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis. </p>
+                </div>
+                <div class="column-viola viola-destra">
+                    <img class="img-computer" src="./img/planning2.png" alt="">
+                    <h2 class="titolo-nero">App Developement</h2>
+                    <p class="paragrafo-nero"> <em>
+                        Develop an on-demand app fro your delivery business to reach your targeted customers without any interruption.
+                    </em></p>
+                    <button class="freccia">&#8595;</button>
+                </div>
             </div>
         </div>
         <!-- Section Testimonials -->
