aggiunta responsive nel menù per desktop

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
                 <div class="column-menu">
                     <img class="img-logo" src="./img/logo.png" alt="">
                 </div>
-                <div class="column-menu hamburger-menu">
-                    <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                <div class="column-menu">
+                    <div class="menu-smartphone hamburger-menu">
+                        <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="menu-desktop">
+                        <ul class="elenco-desktop">
+                            <li class="lista-desktop"><a class="link-desktop" href="">Planning</a></li>
+                            <li class="lista-desktop"><a class="link-desktop" href="">Testimonials</a></li>
+                            <li class="lista-desktop"><a class="link-desktop" href="">Features</a></li>
+                            <li class="lista-desktop"><a class="link-desktop" href="">About Us</a></li>
+                            <li class="lista-desktop"><button class="get-started">Get Started</button></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -25,7 +36,7 @@
         <!-- Section Blu -->
         <div class="container bgcolor-bianco">
             <div class="row row-blu">
-                <div class=" column-blu-grande column-blu">
+                <div class=" column-blu-grande">
                     <h2 class="titolo-blu">Get a demo application</h2>
                     <p class="paragrafo-blu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda adipisci necessitatibus cum non vitae. Dolor reprehenderit cum similique maxime. Necessitatibus illum repellat porro quos fuga nemo officia recusandae magnam praesentium!</p>
                     <button class="button-appstore"><i class="fa-brands fa-apple" style="color: #ffffff;"></i> App Store</button>
