aggiunto responsive desktop container viola

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="container bgcolor-viola">
             <div class="row row-viola">
                 <div class="column-viola viola-sinistra">
-                    <img class="img-computer" src="./img/planning1.png" alt="">
+                    <img class="img-computer img-computer-sinistra" src="./img/planning1.png" alt="">
                     <h2 class="titolo-bianco">Strategic Planning</h2>
                     <p class="paragrafo-bianco">Egastas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis. </p>
                 </div>
                 <div class="column-viola viola-destra">
-                    <img class="img-computer" src="./img/planning2.png" alt="">
+                    <img class="img-computer img-computer-destra" src="./img/planning2.png" alt="">
                     <h2 class="titolo-nero">App Developement</h2>
                     <p class="paragrafo-nero"> <em>
                         Develop an on-demand app fro your delivery business to reach your targeted customers without any interruption.
