esercizio da completare

--- a/index.html
+++ b/index.html
@@ -96,23 +96,42 @@
         <!-- Section Testimonials -->
         <div class="container bgcolor-bianco">
             <div class="row row-testimonials">
-                <div class="column-testimonials">
+                <div class=" column-partners">
+                    <span>TESTIMONIALS</span>
+                    <h2 class="titolo-partners">We are committed expert partners</h2>
+                    <p class="paragrafo-partners">We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                 </div>
                 <div class="column-testimonials">
                     <div class="row-name">
-                        <div class="col-img"></div>
-                        <div class="col-testimonianza"></div>
+                        <div class="col-img">
+                            <img class="img-testimonial" src="./img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="col-testimonianza">
+                             <span>Vitae suscipit tellus mauris a dem maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin.</span>  
+                            <h3 class="nomi">NAT REYNOLDS</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="column-testimonials">
                     <div class="row-name">
-                        <div class="col-img"></div>
-                        <div class="col-testimonianza"></div>
+                        <div class="col-img">
+                            <img class="img-testimonial" src="./img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="col-testimonianza">
+                             Pureti vel turpis manc eget lorem. Quisque id diam vel quam eternentum polvitur etiam. 
+                            <h3 class="nomi" >CELIA ALMEDA</h3>
+                        </div>
                     </div>
                 </div><div class="column-testimonials">
                     <div class="row-name">
-                        <div class="col-img"></div>
-                        <div class="col-testimonianza"></div>
+                        <div class="col-img">
+                            <img class="img-testimonial" src="./img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="col-testimonianza">
+                             Mauris augue neque provide in fermentum. Praesent semper feugiat nibh sed pulvinar proin.
+                            Nihil condimentum id venenatis a condimentum.  
+                            <h3 class="nomi">BOB ROBERTS</h3>
+                        </div>
                     </div>
                 </div>                    
             </div>
