completata section benefits e responsive

--- a/index.html
+++ b/index.html
@@ -140,15 +140,45 @@
         <div>
             <!-- Section Benefits -->
             
-            <div class="container bgcolor-viola">
-                <h2 class="titolo-benefits"></h2>
+            <div class="container bgcolor-viola container-benefits">
+                <h2 class="titolo-benefits">Benefits of working with us</h2>
                 <div class="row row-benefits">
-                    <div class="column-benefits"></div>
-                    <div class="column-benefits"></div>
-                    <div class="column-benefits"></div>
-                    <div class="column-benefits"></div>
-                    <div class="column-benefits"></div>
-                    <div class="column-benefits"></div>
+                    <div class="column-benefits">
+                        <h2 class="number">01</h2>
+                        <h3 class="sottotitolo">Hight Quality</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
+                    <div class="column-benefits">
+                        <h2 class="number">02</h2>
+                        <h3 class="sottotitolo">Creative Team</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
+                    <div class="column-benefits">
+                        <h2 class="number">03</h2>
+                        <h3 class="sottotitolo">Amazing Results</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
+                    <div class="column-benefits">
+                        <h2 class="number">04</h2>
+                        <h3 class="sottotitolo">Best Pricing</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
+                    <div class="column-benefits">
+                        <h2 class="number">05</h2>
+                        <h3 class="sottotitolo">Innovation</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
+                    <div class="column-benefits">
+                        <h2 class="number">06</h2>
+                        <h3 class="sottotitolo">24/7 Support</h3>
+                        <div class="vitae-suscipit">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id vnenatis. </div>
+                        <button class="more">more</button>
+                    </div>
                 </div>
             </div>
         </div>
